link machine to a gym
