# routes/gymRoutes.js
@@ -16,7 +16,7 @@ router.get('/:id', gymIdParam, validate, gymController.getGymById);             
 router.get('/',  validate, gymController.getAllGyms); 
 router.put('/:id', gymRulesUpdate, validate, gymController.updateGym);                     // Update
 router.delete('/:id', gymIdParam, validate, gymController.deleteGym);                  // Delete
-
+router.post('/link-machine', ensureOAuth, gymController.linkMachineToGym);
 // Search gyms that have a specific machine in inventory
 router.get('/by-machine/:machineId', gymByMachineQuery, gymController.getGymsByMachine);
 
